--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,7 +109,7 @@
         rgba(0, 0, 0, 0.6) 33.85%,
         rgba(0, 0, 0, 0.1) 100%
       ),
-      url("../assets/Images/categories/category-right.jpg");
+      url("../Images/categories/category-right.jpg");
   }
 
   .banner-2 {
@@ -118,7 +118,7 @@
         rgba(0, 0, 0, 0.6) 33.85%,
         rgba(0, 0, 0, 0.1) 100%
       ),
-      url("../assets/Images/categories/category-left.jpg");
+      url("../Images/categories/category-left.jpg");
   }
 
   .banner {
@@ -449,5 +449,34 @@
     border-radius: 50%;
     pointer-events: auto;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+  }
+
+  .swiper-pagination-wrapper {
+    position: absolute;
+    bottom: -0.5rem;
+    left: 50%;
+    z-index: 10;
+    display: flex;
+    height: 2.25rem;
+    width: 9rem;
+    --tw-translate-x: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+      rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+      scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    align-items: center;
+    justify-content: center;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  }
+
+  .swiper-pagination-wrapper:is(.dark *) {
+    --tw-bg-opacity: 1;
+    background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+  }
+
+  .custom-bullet {
+    background-color: #10b981 !important;
   }
 }
