--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,6 +173,7 @@
     box-sizing: border-box;
     margin: 3px 11px 3px 1px;
     border: solid 2px;
+
     /* Safari */
     border-color: rgba(0, 0, 0, 0.6);
     border-radius: 2px;
@@ -268,60 +269,11 @@
     background-color: currentColor;
   }
 
-  /* The switch - the box around the slider */
-  .switch {
-    font-size: 13px;
-    position: relative;
-    display: inline-block;
-    width: 3.5em;
-    height: 2em;
-  }
-
   /* Hide default HTML checkbox */
   .switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
-
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #fff;
-    border: 1px solid #adb5bd;
-    transition: 0.4s;
-    border-radius: 30px;
-  }
-
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 1.4em;
-    width: 1.4em;
-    border-radius: 20px;
-    left: 0.27em;
-    bottom: 0.25em;
-    background-color: #adb5bd;
-    transition: 0.4s;
-  }
-
-  input:checked + .slider {
-    background-color: #10b981;
-    border: 1px solid #10b981;
-  }
-
-  input:focus + .slider {
-    box-shadow: 0 0 1px #10b981;
-  }
-
-  input:checked + .slider:before {
-    transform: translateX(1.4em);
-    background-color: #fff;
   }
 
   /* tooltip */
@@ -440,41 +392,13 @@
     accent-color: #10b981;
   }
 
-  .wrapper .range-input input::-webkit-slider-thumb {
-    height: 15px;
-    width: 15px;
-    background-color: #10b981;
-    border-radius: 50%;
-    pointer-events: auto;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+  /* react-slick dote custom style */
+  .customDots li button:before {
+    color: gray;
+    font-size: 14px;
+    font-size: 8px;
   }
-
-  .swiper-pagination-wrapper {
-    position: absolute;
-    bottom: -0.5rem;
-    left: 50%;
-    z-index: 10;
-    display: flex;
-    height: 2.25rem;
-    width: 9rem;
-    --tw-translate-x: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y))
-      rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
-      scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-    align-items: center;
-    justify-content: center;
-    border-top-left-radius: 0.5rem;
-    border-top-right-radius: 0.5rem;
-    --tw-bg-opacity: 1;
-    background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-  }
-
-  .swiper-pagination-wrapper:is(.dark *) {
-    --tw-bg-opacity: 1;
-    background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-  }
-
-  .custom-bullet {
-    background-color: #10b981 !important;
+  .customDots li.slick-active button:before {
+    color: #10b981;
   }
 }
