--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,41 +28,42 @@
   @font-face {
     font-family: "Dana";
     src: local("Dana"),
-      url("../assets/fonts/Dana/woff2/DanaFaNum-Regular.woff2");
+      url("../../public/fonts/Dana/woff2/DanaFaNum-Regular.woff2");
     font-display: swap;
   }
 
   @font-face {
     font-family: "Dana Medium";
-    src: local("Dana"), url("../assets/fonts/Dana/woff2/DanaFaNum-Medium.woff2");
+    src: local("Dana"),
+      url("../../public/fonts/Dana/woff2/DanaFaNum-Medium.woff2");
     font-display: swap;
   }
 
   @font-face {
     font-family: "Dana DemiBold";
     src: local("Dana"),
-      url("../assets/fonts/Dana/woff2/DanaFaNum-DemiBold.woff2");
+      url("../../public/fonts/Dana/woff2/DanaFaNum-DemiBold.woff2");
     font-display: swap;
   }
 
   @font-face {
     font-family: "Morabba Light";
     src: local("Morabba"),
-      url("../assets/fonts/Morabba/woff2/Morabba-Light.woff2");
+      url("../../public/fonts/Morabba/woff2/Morabba-Light.woff2");
     font-display: swap;
   }
 
   @font-face {
     font-family: "Morabba Bold";
     src: local("Morabba"),
-      url("../assets/fonts/Morabba/woff2/Morabba-Bold.woff2");
+      url("../../public/fonts/Morabba/woff2/Morabba-Bold.woff2");
     font-display: swap;
   }
 
   @font-face {
     font-family: "Morabba Medium";
     src: local("Morabba"),
-      url("../assets/fonts/Morabba/woff2/Morabba-Medium.woff2");
+      url("../../public/fonts/Morabba/woff2/Morabba-Medium.woff2");
     font-display: swap;
   }
 }
@@ -101,24 +102,6 @@
   .nav-item.active a::after {
     width: 100%;
     left: 0;
-  }
-
-  .banner-1 {
-    background: linear-gradient(
-        270deg,
-        rgba(0, 0, 0, 0.6) 33.85%,
-        rgba(0, 0, 0, 0.1) 100%
-      ),
-      url("../assets/Images/categories/category-right.jpg");
-  }
-
-  .banner-2 {
-    background: linear-gradient(
-        270deg,
-        rgba(0, 0, 0, 0.6) 33.85%,
-        rgba(0, 0, 0, 0.1) 100%
-      ),
-      url("../assets/Images/categories/category-left.jpg");
   }
 
   .banner {
@@ -198,6 +181,65 @@
     transform: translate(3px, 4px) rotate(-45deg);
   }
 
+  /* The switch - the box around the slider */
+
+  .switch {
+    font-size: 13px;
+    position: relative;
+    display: inline-block;
+    width: 3.5em;
+    height: 2em;
+  }
+
+  /* Hide default HTML checkbox */
+
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  /* The slider */
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    border: 1px solid #adb5bd;
+    transition: 0.4s;
+    border-radius: 30px;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 1.4em;
+    width: 1.4em;
+    border-radius: 20px;
+    left: 0.27em;
+    bottom: 0.25em;
+    background-color: #adb5bd;
+    transition: 0.4s;
+  }
+
+  input:checked + .slider {
+    background-color: #10b981;
+    border: 1px solid #10b981;
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px #10b981;
+  }
+
+  input:checked + .slider:before {
+    transform: translateX(1.4em);
+    background-color: #fff;
+  }
+
   /* Checked, Indeterminate */
   .cl-checkbox > input:checked,
   .cl-checkbox > input:indeterminate {
@@ -267,13 +309,6 @@
   .cl-checkbox > input:indeterminate:disabled + span::before {
     border-color: transparent;
     background-color: currentColor;
-  }
-
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
   }
 
   /* tooltip */
